Name:                newtype-th
Version:             0.1
Synopsis:            Provides a template haskell based mechanism for
                     deriving Control.Newtype class instances.
Description:         
License:             BSD3
License-file:        LICENSE
Author:              Michael Sloan
Maintainer:          Michael Sloan <mgsloan at gmail>
-- Copyright:           
Category:            Control
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.2

Library
  Exposed-modules:     Control.Newtype.TH
  Build-depends:       base >= 3.0 && < 6, newtype, haskell-src-meta, template-haskell
  Ghc-options: -Wall
